# petsc_minimal

./: CMakeLists.txt  main.c
cmake-modules/: README.txt
